fixed logo alignment

--- a/src/assets/css/Navbar.module.css
+++ b/src/assets/css/Navbar.module.css
@@ -52,16 +52,10 @@
     padding: 0 2.2rem 0 2.2rem;
 }
 
-.logoWrapper {
-    width: 100%;
-    height: 100%;
-}
-
 .logo {
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s cubic-bezier(0.16, 1, 0.3, 1), -webkit-transform 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+    width: 2.2rem;
+    height: 2.2rem;
+    overflow: hidden;
 }
 
 .logo svg {
